ingress/gateway_cert.yml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - final-work-k8s.raisa44.men
        - grafana.final-work-k8s.raisa44.men
      tls:
        mode: SIMPLE
        credentialName: final-work-k8s-tls
